cluster/home/apps/media/radarr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    hajimari.io/icon: mingcute:movie-fill
    hajimari.io/enable: true
    hajimari.io/appName: "Radarr"
    hajimari.io/group: "Media"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: radarr.${SECRET_LOCAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr-svc
            port:
              number: 80
  tls:
  - hosts: 
    - radarr.${SECRET_LOCAL_DOMAIN}
    secretName: radarr-ingress-certs
